...

                <View
                    android:layout_width="12dp"
                    android:layout_height="0dp" />

                <Button
                    android:id="@+id/btnEditEvent"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_button_white_outlined"
                    android:text="@string/organizer_edit_event"
                    android:textAllCaps="false"
...
                android:text="@string/organizer_view_final_entrants"
                android:textAllCaps="false"
                android:textColor="@color/text_white"
                android:fontFamily="@font/inter24ptmedium" />

            <Button
                android:id="@+id/btnViewCanceledEntrants"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_button_white_outlined"
                android:text="@string/organizer_view_canceled_entrants"
                android:textAllCaps="false"
                android:textColor="@color/text_white"
                android:fontFamily="@font/inter24ptmedium" />

            <Button
                android:id="@+id/btnViewInvitedEntrants"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_button_white_outlined"
                android:text="@string/organizer_view_invited_entrants"
                android:textAllCaps="false"
...
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:fontFamily="@font/inter24ptmedium" />

            
            <Button
                android:id="@+id/btnDrawReplacement"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_button_white_outlined"
                android:text="@string/organizer_draw_replacement"
                android:textAllCaps="false"
...
