...
            android:src="@drawable/waitwell_logo"
            android:contentDescription="Logo" />
    </RelativeLayout>

    
    <ImageView
        android:id="@+id/btnBack"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="12dp"
        android:background="@drawable/bg_circle_overlay"
        android:padding="10dp"
        android:src="@drawable/ic_back_arrow"
...
                android:textStyle="bold"
                android:gravity="center" />
        </LinearLayout>

        
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnMyWaitlist"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/bg_button_my_waitlist"
            android:paddingStart="28dp"
            android:paddingEnd="28dp"
...
